python3.12 (3.12.4-2) UNRELEASED; urgency=medium

  [ Benjamin Drung ]
  * debian/rules: Use pkg-info.mk.
  * debian/rules: Use architecture.mk.
  * d/rules: Export variable needed for ELF package metadata.
  * Rely on SOURCE_DATE_EPOCH for reproducibility.

  [ Graham Inggs ]
  * Drop test dependencies on python3-distutils.
  * Skip test_exceptions and test_repl which never run to
    completion on the Ubuntu autopkgtest infrastructure.

 -- Matthias Klose <doko@debian.org>  Thu, 11 Jul 2024 14:36:39 +0200

python3.12 (3.12.4-1) unstable; urgency=medium

  * Python 3.12.4 release.
  * Refresh patches.
  * Patch: Ignore test/wheeldata completely in test_makefile.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 12 Jun 2024 20:06:53 +0100

python3.12 (3.12.3-1) unstable; urgency=medium

  * Python 3.12.3 release.

 -- Matthias Klose <doko@debian.org>  Wed, 10 Apr 2024 07:33:47 +0200

python3.12 (3.12.2-5) unstable; urgency=medium

  * Update to the 3.12 branch 2024-02-02.
    - Make C API compatible with ISO C90 (GH-116950). Closes: #1064028.
    - Upstream patch for GH-115874.
    - Still identify as "3.12.2", because "3.12.2+" is mis-treated by some
      third-party packages.
  * Use CFLAGS_NODIST, LDFLAGS_NODIST for passing build flags.
  * d/rules: Move configure/build targets for each build together.
  * Drop ffi configure options, obsolete.
  * Re-enable PGO/LTO builds.

 -- Matthias Klose <doko@debian.org>  Tue, 02 Apr 2024 16:53:02 +0200

python3.12 (3.12.2-4) unstable; urgency=medium

  [ Stefano Rivera ]
  * Build-Depend on libnsl-dev for NIS support. Closes: #1065128.

  [ Matthias Klose ]
  * Fix override files for renamed t64 packages.
  * Fix package names in PVER-dbg maintainer scripts. Addresses: #1065164.
  * Really build without LTO when requested.
  * Disable LTO builds and testsuite for now (mesa t64 transition ...).

 -- Matthias Klose <doko@debian.org>  Sun, 03 Mar 2024 10:11:00 +0100

python3.12 (3.12.2-3) unstable; urgency=medium
